--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <audio id="audio1" style="display: none;"><source src="./audio/silence.mp3" type="audio/mp3"></audio>
+    <audio id="audio2" style="display: none;"><source src="./audio/01.mp3" type="audio/mp3"></audio>
+    <audio id="audio3" style="display: none;"><source src="./audio/02.mp3" type="audio/mp3"></audio>
+    <audio id="audio4" style="display: none;"><source src="./audio/03.mp3" type="audio/mp3"></audio>
+    <audio id="audio5" style="display: none;"><source src="./audio/04.mp3" type="audio/mp3"></audio>
     <div class="containerr">
         <form>
           <div class="formulario form-step-active" style="padding-bottom:20px;">
